Rewrite nfa.hpp for zsymbols

--- a/src/poc/Makefile
+++ b/src/poc/Makefile
@@ -1,8 +1,13 @@
 CXX = g++
 CXXFLAGS = -g -Wall -Wextra -Wpedantic -Werror -std=c++17
 
+all:	zsymbols.test nexpr.test
+
 zsymbols.test:	zsymbols.test.cpp zsymbols.hpp
 	$(CXX) $(CXXFLAGS) -o $@ $<
 
+nexpr.test:	nexpr.test.cpp nexpr.hpp
+	$(CXX) $(CXXFLAGS) -o $@ $<
+
 clean:
-	-rm -rf zsymbols.test
+	-rm -rf zsymbols.test nexpr.test
