Refactor poc Makefile

--- a/src/poc/Makefile
+++ b/src/poc/Makefile
@@ -1,13 +1,11 @@
 CXX = g++
 CXXFLAGS = -g -Wall -Wextra -Wpedantic -Werror -std=c++17
+TESTS = zsymbols.test nexpr.test
 
-all:	zsymbols.test nexpr.test
+all:	$(TESTS)
 
-zsymbols.test:	zsymbols.test.cpp zsymbols.hpp
-	$(CXX) $(CXXFLAGS) -o $@ $<
-
-nexpr.test:	nexpr.test.cpp nexpr.hpp
+$(TESTS):	%.test:	%.test.cpp %.hpp
 	$(CXX) $(CXXFLAGS) -o $@ $<
 
 clean:
-	-rm -rf zsymbols.test nexpr.test
+	-rm -rf $(TESTS)
