Add make check recipe (poc)

--- a/src/poc/Makefile
+++ b/src/poc/Makefile
@@ -7,5 +7,11 @@ all:	$(TESTS)
 $(TESTS):	%.test:	%.test.cpp %.hpp
 	$(CXX) $(CXXFLAGS) -o $@ $<
 
+check:	all
+	@for i in $(TESTS); \
+	do \
+		./$$i; \
+	done
+
 clean:
 	-rm -rf $(TESTS)
