--- a/src/poc/Makefile
+++ b/src/poc/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -g -Wall -Wextra -Wpedantic -Werror -std=c++17 -fpic
 TESTS = $(patsubst %.cpp,%,$(shell find -name "*.test.cpp"))
 
 .PHONY:	all
-all:	$(TESTS) libfuture.a libfuture.so example_c
+all:	$(TESTS) libfuture.a libfuture.so example_c example_cpp
 
 $(TESTS):	%.test:	%.test.cpp %.hpp
 	$(CXX) $(CXXFLAGS) -o $@ $<
@@ -21,6 +21,9 @@ libfuture.so:	wrapper.cxx rnd.h automaton.hpp nexpr.hpp zsymbols.hpp
 example_c:	example.c libfuture.so libfuture.a
 	gcc -g -Wall -Wextra -Wpedantic -Werror -I. -L. $< -o $@ -lfuture
 
+example_cpp:	example.cpp automaton.hpp nexpr.hpp zsymbols.hpp
+	$(CXX) $(CXXFLAGS) -o $@ $<
+
 check:	all
 	@for i in $(TESTS); \
 	do \
@@ -29,4 +32,4 @@ check:	all
 
 .PHONY:	clean
 clean:
-	-rm -rf $(TESTS) example_c *.so *.a
+	-rm -rf $(TESTS) example_c example_cpp *.so *.a
