Clean up vgcore* files in poc

--- a/src/poc/Makefile
+++ b/src/poc/Makefile
@@ -32,4 +32,4 @@ check:	all
 
 .PHONY:	clean
 clean:
-	-rm -rf $(TESTS) example_c example_cpp *.so *.a
+	-rm -rf $(TESTS) example_c example_cpp *.so *.a vgcore*
