--- a/examples/poc/python/Makefile
+++ b/examples/poc/python/Makefile
@@ -1,2 +1,2 @@
 output/scanners.py:	templates/template.py templates/scanner.py
-	python ../../example.py template.py -d templates > $@ 
+	python ../example.py template.py -d templates > $@ 
